[gd_scene load_steps=4 format=3 uid="uid://cj7eqmw0ugsr7"]

[ext_resource type="Script" uid="uid://sshkxit0m716" path="res://Scripts/UI/options_menu.gd" id="1_m2ri5"]
[ext_resource type="FontFile" uid="uid://ceg0ttv5rstj5" path="res://Assets/Font/PixelOperator8.ttf" id="1_tgcvl"]
[ext_resource type="Script" uid="uid://b3hk8tkerws6n" path="res://Scripts/UI/ui_button_animations.gd" id="3_ou42m"]

[node name="OptionsMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_m2ri5")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1156.0
offset_bottom = 650.0
color = Color(0, 0, 0, 0.8)

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsMenuVBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="Options" type="Label" parent="ColorRect/CenterContainer/OptionsMenuVBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tgcvl")
theme_override_font_sizes/font_size = 56
text = "Options"
horizontal_alignment = 1

[node name="MasterVolume" type="Label" parent="ColorRect/CenterContainer/OptionsMenuVBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tgcvl")
theme_override_font_sizes/font_size = 32
text = "Master Volume"
horizontal_alignment = 1

[node name="MasterSlider" type="HSlider" parent="ColorRect/CenterContainer/OptionsMenuVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 100.0

[node name="MusicVolume" type="Label" parent="ColorRect/CenterContainer/OptionsMenuVBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tgcvl")
theme_override_font_sizes/font_size = 32
text = "Music Volume"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="ColorRect/CenterContainer/OptionsMenuVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 100.0

[node name="SFXVolume" type="Label" parent="ColorRect/CenterContainer/OptionsMenuVBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tgcvl")
theme_override_font_sizes/font_size = 32
text = "SFX Volume"
horizontal_alignment = 1

[node name="SFXSlider" type="HSlider" parent="ColorRect/CenterContainer/OptionsMenuVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 100.0

[node name="OptionsBackButton" type="Button" parent="ColorRect/CenterContainer/OptionsMenuVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tgcvl")
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="ButtonAnimations" type="Node" parent="ColorRect/CenterContainer/OptionsMenuVBoxContainer"]
script = ExtResource("3_ou42m")
